hello_world/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-hello
spec:
  ports:
  - port: 80
    targetPort: main-port
    protocol: TCP
  selector:
    app: python-hello
  type: NodePort
